--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,1 +1,6 @@
 spring.application.name=javcertwork
+spring.datasource.url=jdbc:postgresql://localhost:5432/test_db
+spring.datasource.username=test
+spring.datasource.password=test
+spring.jpa.hibernate.ddl-auto=update
+server.port=8090
